style: fix alignment issues on mobile

--- a/styles/Login.module.scss
+++ b/styles/Login.module.scss
@@ -11,7 +11,8 @@
     width: 160px;
     height: 40px;
     object-fit: cover;
-    margin: 10px 0;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
   }
 }
 
@@ -112,7 +113,7 @@
 
 @media (max-width: 768px) {
   .loginBox {
-    padding: 1rem;
+    padding: 1rem 2rem;
   }
 
   .title {
